# src/cmd/server/forms/report.go
@@ -3,15 +3,17 @@ package forms
 import "time"
 
 type ReportRequestForm struct {
-	DeviceInfo string  `example:"00:11:22:33:FF:EE"  valid:"required"`
-	Latitude   float64 `example:"37.5428147089301"   valid:"required"`
-	Longitude  float64 `example:"126.96631451849314" valid:"required"`
+	DeviceInfo string  `json:"device_info" example:"00:11:22:33:FF:EE"  valid:"required"`
+	Latitude   float64 `                   example:"37.5428147089301"   valid:"required"`
+	Longitude  float64 `                   example:"126.96631451849314" valid:"required"`
 }
 
 type ReportResponse struct {
-	CreatedAt  time.Time
-	UpdatedAt  time.Time
-	DeviceInfo string  `example:"00:11:22:33:FF:EE"  valid:"required"`
-	Latitude   float64 `example:"37.5428147089301"   valid:"required"`
-	Longitude  float64 `example:"126.96631451849314" valid:"required"`
+	ID               uint      `json:"id"`
+	CreatedAt        time.Time `json:"created_at"`
+	UpdatedAt        time.Time `json:"updated_at"`
+	RecordedAudioURL string    `json:"recorded_audio_url"`
+	DeviceInfo       string    `json:"device_info"        example:"00:11:22:33:FF:EE"  valid:"required"`
+	Latitude         float64   `json:"latitude"           example:"37.5428147089301"   valid:"required"`
+	Longitude        float64   `json:"longitude"          example:"126.96631451849314" valid:"required"`
 }
